// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MaritalStatusField /> matches snapshot 1`] = `
<select
  class="sc-dIUggk hhFmtN"
  id="maritalStatusField"
  name="name"
  type="text"
>
  <option
    class="sc-dmlrTW hequYp"
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="unmarried"
  >
    panna/kawaler
  </option>
  <option
    value="married"
  >
    mężatka/żonaty
  </option>
  <option
    value="divorced"
  >
    rozwiedziona/rozwiedziony
  </option>
  <option
    value="widower"
  >
    wdowa/wdowiec
  </option>
  <option
    value="with_parents"
  >
    z rodzicami
  </option>
</select>
`;

exports[`<MaritalStatusField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-idOhPF buAmNl"
      >
        <select
          class="sc-dIUggk jigzeI"
          id="maritalStatusField"
          label="Test"
          name="name"
          required=""
          type="text"
        >
          <option
            class="sc-dmlrTW hequYp"
            disabled=""
            value="select"
          >
            wybierz *
          </option>
          <option
            value="unmarried"
          >
            panna/kawaler
          </option>
          <option
            value="married"
          >
            mężatka/żonaty
          </option>
          <option
            value="divorced"
          >
            rozwiedziona/rozwiedziony
          </option>
          <option
            value="widower"
          >
            wdowa/wdowiec
          </option>
          <option
            value="with_parents"
          >
            z rodzicami
          </option>
        </select>
        <span
          class="sc-hHftDr jmpDvw"
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        To pole jest wymagane
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<MaritalStatusField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-idOhPF buAmNl"
      >
        <select
          class="sc-dIUggk hhFmtN"
          id="maritalStatusField"
          label="Test"
          name="name"
          type="text"
        >
          <option
            class="sc-dmlrTW hequYp"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="unmarried"
          >
            panna/kawaler
          </option>
          <option
            value="married"
          >
            mężatka/żonaty
          </option>
          <option
            value="divorced"
          >
            rozwiedziona/rozwiedziony
          </option>
          <option
            value="widower"
          >
            wdowa/wdowiec
          </option>
          <option
            value="with_parents"
          >
            z rodzicami
          </option>
        </select>
        <span
          class="sc-hHftDr jmpDvw"
        />
      </div>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<MaritalStatusField /> select field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <div
        class="sc-idOhPF buAmNl"
      >
        <select
          class="sc-dIUggk jigzeI"
          id="maritalStatusField"
          name="name"
          type="text"
        >
          <option
            class="sc-dmlrTW hequYp"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="unmarried"
          >
            panna/kawaler
          </option>
          <option
            value="married"
          >
            mężatka/żonaty
          </option>
          <option
            value="divorced"
          >
            rozwiedziona/rozwiedziony
          </option>
          <option
            value="widower"
          >
            wdowa/wdowiec
          </option>
          <option
            value="with_parents"
          >
            z rodzicami
          </option>
        </select>
        <span
          class="sc-hHftDr jmpDvw"
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;
